--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porjeto Login</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
     <main>
         <section id="login">
             <div id="imagem">
-                Foto
+               
             </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post">
-
+                    <label for="login" id="login" class="material-icons">Login</label>
+                    <input type="email" name="email" id="iemail" value=""><br>
+                    
+                    <label for="password">Senha</label>
+                    <input type="password" name="password" id="ipassword">
                 </form>
             </div>
         </section>
